2015-01-31  SilverNexus
    * settings.c,
      settings.h: Made initialization and release of settings return no values.

2014-12-04	SilverNexus
	* parseArgs.c: Added the print level message control flags to the help message.

2014-10-01	SilverNexus
	* ErrorLog.c,
	  ErrorLog.h: Make log_event function return void, rather than int.

2014-06-23	SilverNexus
	* main.c: Make default search directory be current directory.

2014-06-12	SilverNexus
	* main.c: Made final message vary for when match are and are not found.

2014-06-11	SilverNexus
	* parseArgs.c: Added support for log message suppression.
	* settings.h: Added setting for log message suppression.
	* settings.c: Default suppression level is below INFO.
	* ErrorLog.c: Check minimum print level before printing log message.

2014-06-11	SilverNexus
	* main.c: Add functionality that times the search.

2014-06-09	SilverNexus
	* settings.h: Add field for length of search string.
	* settings.c: Initialize search string length.
	* parseArgs.c: Calculate length at assignment of search string.
	* search.c: Remove old length calculation in every line searched.

2014-06-05	SilverNexus
	* Makefile.am,
	* configure.ac,
	* autogen.sh: use autotools as part of build process

-----------------------------------------------------------------------------------------
                                      Changes for 0.01
-----------------------------------------------------------------------------------------

2014-06-04	SilverNexus
	* ErrorLog.c: Make a FATAL error exit the program directly.
	* main.c: Register free_settings with atexit library function.
	* parseArgs.c: Change exit(0) to exit(EXIT_SUCCESS).

2014-06-03	SilverNexus
	* parseArgs.h: Add a function prototype for a universal help message.
	* parseArgs.c: Move the help message to its own function.
	* main.c: Make improper argument usage cause the program to print help and exit.

2014-05-29	SilverNexus